# dib

./: Dib.hs  LICENSE  Main.hs  README.md  dib.cabal  dib.hs  main.hs  scratch.hs
Dib/: Actions.hs  Funcs.hs  Rules.hs  Targets.hs
src/: Dib.hs
src/Dib/: Funcs.hs  Gatherers.hs  Stage.hs  Target.hs  Types.hs  Util.hs
src/Dib/Builders/: C.hs  Copy.hs  Simple.hs
src/Dib/Scanners/: CDepScanner.hs
