name:           dib
version:        0.4.0
cabal-version:  >= 1.4
build-type:     Simple
license:        MIT
author:         Brett Lajzer
maintainer:	    Brett Lajzer

library
  build-depends:   base >= 4.4, text, containers, mtl, directory < 1.2, old-time, process, filepath, cereal, bytestring, digest, strict
  ghc-options:     -Wall -O2
  hs-source-dirs:  src
  exposed-modules: Dib, Dib.Gatherers, Dib.Stage, Dib.Target, Dib.Types, Dib.Scanners.CDepScanner, Dib.Builders.C, Dib.Builders.Copy, Dib.Builders.Simple, Dib.Util
  extensions:      OverloadedStrings

executable dib
  build-depends:   base >= 4.4, containers, mtl, old-time, filepath, transformers
  ghc-options:     -Wall -O2
  hs-source-dirs:  .
  main-is:         Main.hs

